--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,146 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Poker App
     </ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-grid fixed>
+    <form #userForm="ngForm" (ngSumbit)="enviarMensaje(userForm)">
+      <ion-row>
+        <ion-col size-md="12">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Tu mano</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <i-col size-md="3">
+                <img [src]="card1" width="200" height="200">
+              </i-col>
+              <i-col size-md="3">
+                <img [src]="card2" width="200" height="200">
+              </i-col>
+              <i-col size-md="3">
+                <img [src]="card3" width="200" height="200">
+              </i-col>
+              <i-col size-md="3">
+                <img [src]="card4" width="200" height="200">
+              </i-col>
+              <i-col size-md="3">
+                <img [src]="card5" width="200" height="200">
+              </i-col>
+            </ion-card-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-md="12">
+          <ion-card>
+            <ion-card-content>
+              <ion-col size-md="12" offset-md="4">
+                <ion-col size-md="4">
+                  <ion-button color="primary" (click)="play()">Jugar</ion-button>
+                </ion-col>
+                <ion-col size-md="4">
+                  <ion-button color="primary" disabled>Apostar</ion-button>
+                </ion-col>
+                <ion-col size-md="4">
+                  <ion-button color="primary" disabled>Parar</ion-button>
+                </ion-col>
+              </ion-col>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-md="12">
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Probabilidades</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Nada: 
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Pareja:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Doble Pareja:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Trio:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Escalera:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Color:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Full:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Poker:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Escalera de color
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+              <i-col size-md="1">
+                <ion-card>
+                  <ion-card-content>
+                    Escalera real:
+                  </ion-card-content>
+                </ion-card>
+              </i-col>
+
+            </ion-card-content>
+
+          </ion-card>
+        </ion-col>
+      </ion-row>
+
+    </form>
+
+
+  </ion-grid>
 </ion-content>
