App finalizada, añadidos los servicios de la api y la recolección de datos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -64,63 +64,63 @@
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Nada: 
+                    Nada: {{nada}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Pareja:
+                    Pareja: {{pareja}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Doble Pareja:
+                    Doble Pareja: {{doblePareja}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Trio:
+                    Trio: {{trio}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Escalera:
+                    Escalera: {{escalera}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Color:
+                    Color: {{color}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Full:
+                    Full: {{full}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Poker:
+                    Poker: {{poker}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Escalera de color
+                    Escalera de color: {{escaleraColor}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
@@ -128,7 +128,7 @@
               <i-col size-md="1">
                 <ion-card>
                   <ion-card-content>
-                    Escalera real:
+                    Escalera real: {{escaleraReal}}
                   </ion-card-content>
                 </ion-card>
               </i-col>
